[package]
name = "emergency-backup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.28"
eframe = "0.28"
rodio = "0.19"
rdev = "0.5"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
sysinfo = "0.31.2"
chrono = "0.4.38"
cpu-time = "1.0.0"
fancy-duration = "0.9.2"
auto-launch = "0.5.0"
